--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
-    "        travel_destinations[country] = country.tit"
+    "        travel_destinations[country] = country.title()\n",
+    "        "
    ]
   },
   {
