--- a/index.ipynb
+++ b/index.ipynb
@@ -226,8 +226,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for country in range(len(travel_destinations)):\n",
-    "        travel_destinations[country].title()\n",
+    "    for country in range(len(travel_destinations):\n",
+    "        travel_destinations[country] = travel_destinations[country].title()\n",
     "        return travel_destinations"
    ]
   },
