--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
     "        travel_destinations[country] = travel_destinations[country].title()\n",
     "        return travel_destinations\n",
     "    \n",
-    "  travel_destinations[country].title()  "
+    "travel_destinations.title()  "
    ]
   },
   {
