--- a/index.ipynb
+++ b/index.ipynb
@@ -240,9 +240,7 @@
     "def capitalize_countries():\n",
     "    for country in list(range(len(travel_destinations))):\n",
     "        travel_destinations[country] = travel_destinations[country].title()\n",
-    "        return travel_destinations\n",
-    "    \n",
-    "    "
+    "        return travel_destinations"
    ]
   },
   {
